--- a/ps531/exploration2.Rmd
+++ b/ps531/exploration2.Rmd
@@ -1,4 +1,38 @@
-## ----include=FALSE, cache=FALSE------------------------------------------
+---
+title: 'Exploration 2: Bias and Unbiasedness'
+author: 'Jake Bowers'
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
+fontsize: 10pt
+geometry: margin=1in
+mainfont: "Crimson Text"
+graphics: yes
+header-includes:
+  - \usepackage[T1]{fontenc}
+  - \usepackage{textcomp}
+  - \usepackage{fontspec}
+  - \newfontfamily\unicodefont[Ligatures=TeX]{TeX Gyre Heros}
+  - \newfontfamily\themainfont[Ligatures=TeX]{Crimson Text}
+  - \newfontfamily\grouptwofont[Ligatures=TeX]{Source Code Pro}
+  - \newfontfamily\groupthreefont[Ligatures=TeX]{Courier}
+output:
+    html_document:
+      fig_caption: yes
+      fig_height: 4
+      fig_width: 4
+    pdf_document:
+      fig_caption: yes
+      fig_height: 4
+      fig_width: 4
+      latex_engine: xelatex
+      keep_tex: true
+---
+
+
+<!-- Make this document using library(rmarkdown); render("exploration1.Rmd") -->
+\input{mytexsymbols}
+
+
+```{r include=FALSE, cache=FALSE}
 # Some customization.  You can alter or delete as desired (if you know what you are doing).
 # knitr settings to control how R chunks work.
 
@@ -9,8 +43,10 @@
 
 require(knitr)
 opts_chunk$set( tidy=FALSE, echo=TRUE,results='markup',strip.white=TRUE,fig.path='figs/fig',cache=FALSE,highlight=TRUE,width.cutoff=100,size='tiny',message=FALSE,comment=NA)
+```
 
-## ----initialize,echo=FALSE-----------------------------------------------
+
+```{r initialize,echo=FALSE}
 ##First, just setup the R environment for today:
 if(!file.exists('figs')) dir.create('figs')
 
@@ -26,8 +62,18 @@ options(SweaveHooks=list(fig=function(){
 	scipen=8,
 	width=132
 	)
+```
 
-## ----inspectmatches, results='hide'--------------------------------------
+The UN director is pleased. Your matched design seems like it closely
+approximates an natural experiment. However, she asks if you could tell her
+which matched sets have the most and which sets have the least differences in
+terms of percent religiously active Muslims and also the sets with the most
+religiously active Muslims and also whether the differences of means within
+those sets differ greatly from the overall difference that you estimated
+conditional on matched set last time. Here is some code that she provided that
+a previous analyst used to explore your matched design.
+
+```{r inspectmatches, results='hide'}
 load(url("http://jakebowers.org/Data/ho05.rda"))
 
 covariatesLabels <- c("GOR" = "Government Office Region",
@@ -78,14 +124,17 @@ diverseImmigrantSets<-names(immdiffs[immdiffs==.5])
 lmOverall<-lm(hlphrs~postbomb+fm1,data=wrkdat)
 coef(lmOverall)[["postbomb"]]
 ## Set by set differences of means
-setEffects<-sapply(split(wrkdat,fm1),function(dat){ coef(lm(hlphrs~postbomb,data=dat))[["postbomb"]] })
+setEffects<-sapply(split(wrkdat,fm1),function(dat){ coef(lm(hlphrs~postbomb,data=dat))[["postbomb"]] }) # By sets. See Split.
 sort(zapsmall(setEffects))
+hist(setEffects, breaks = 15)
 ## Set by set effects for the sets with the most immigrant diversity (i.e. where half of the people were immigrants)
 zapsmall(setEffects[diverseImmigrantSets])
 summary(setEffects[diverseImmigrantSets])
+hist(setEffects[diverseImmigrantSets])
 lm(hlphrs~postbomb,data=wrkdat[fm1 %in% diverseImmigrantSets,])
+```
 
-## ----activemuslims, results='hide', echo=FALSE---------------------------
+```{r activemuslims, results='hide', echo=FALSE}
 table(wrkdat$relig.and.act)
 table(wrkdat$relig.and.act=="Muslim.Active")
 activemuslims<-sapply(split(wrkdat,fm1),function(dat){ mean(dat$relig.and.act=="Muslim.Active") })
@@ -105,8 +154,24 @@ summary(setEffects[leastActiveMuslims])
 coef(lmOverall)[["postbomb"]]
 
 
+```
 
-## ----tidy=FALSE, results='hide'------------------------------------------
+"Now," she says after seeing your work, "I can be more honest with you. We
+have signal intelligence suggesting that the timing of the bombing was actually
+randomly assigned by a group of terrorist social scientists trying to figure
+out how to get the most social disruption from each attack. However, my
+superiors would like to know the proportion of people who would have changed
+their behavior as a result of the experiment,err, tragedy rather than the
+change in the number of hours. I asked for help from one of our prisoners and
+she provided the following code before she escaped.''
+
+
+You say, "Prisoner?!! Escaped??!!" And she says, "Oh! Sorry, it must be the
+poor connection. I meant to say, the 'pensioner before she retired to
+the Cape'. Can you look at the code and figure it out? I'm particularly
+concerned about mentions of bias."
+
+```{r tidy=FALSE, results='hide'}
 wrkdat$hlp01<-as.numeric(wrkdat$hlphrs>0)
 ## check recode:
 ## with(wrkdat,table(hlp01,hlphrs))
@@ -114,21 +179,57 @@ logitmod<-glm(hlp01~postbomb,data=wrkdat,family=binomial(link="logit"))
 coef(logitmod)[["postbomb"]] ## This is biased according to David Freedman 2008 and it doesn't estimate what was requested.
 olsmod<-lm(hlp01~postbomb,data=wrkdat)
 coef(olsmod)[["postbomb"]] ## This estimates the requested quantity and it is unbiased!
+```
 
-## ----biassketch, results='hide', eval=FALSE, echo=TRUE, cache=TRUE-------
+"This little bit of code raised a lot of questions for me. For example, at
+first this analyst refused to use a logit model, but I had heard that you
+shouldn't use an ols model with a binary outcome and so I insisted. Yet, she
+says that the logit coefficient is both wrong and biased. I don't understand. I
+thought I was doing the right thing by insisting on the logit model for a
+binary outcome. First, can you tell me how to interpret these two different
+numbers with respect to the question about the proportion of people who may
+have changed their behavior due to the bombing? And, if the logit model is not
+telling us about that quantity, what is it telling us?"
+
+# After matching, what is the appropriate test?  
+
+# Does this DV make sense anyways? Why model a continuous outcome using a dichotamous variable?  
+
+# Why [not] use the logit model?  
+[blah](http://journals.plos.org/plosone/article?id=10.1371%2Fjournal.pone.0132102)
+
+# Why [not] use the ols model?  
+
+
+"Second, I'm very worried about the word 'bias'. Can you explain in your own
+words what it means for an estimator to be biased or unbiased? The analyst gave
+me a list of a few sources that talk about bias that might be useful
+(@gerber2012field Chap 3, @james2013introduction Chap 3, @lohr:2001 Chap 2,
+@berk04)."
+
+"Third, can you show me evidence about whether these procedures are biased or
+not? The analyst left some code that I didn't understand. Can you fix it and
+explain it? It looks like it might have been used for some other purpose and
+doesn't refer to any logit models. I also don't understand what simulation
+error means. Please help!"
+
+
+```{r biassketch, results='hide', eval=FALSE, echo=TRUE, cache=TRUE}
 set.seed(20150313)
 ## Bias refers to a relationship between the repeated operation of a procedure and a truth. So we have to invent a truth.
 numhlpers<-round(nrow(wrkdat)*.55) ## table(wrkdat$hlp01[wrkdat$postbomb==0])
 wrkdat$fakey0<-sample(rep(c(0,1),c(nrow(wrkdat)-numhlpers,numhlpers)))
 trueATE<-.25 ## posit a true average treatment effect
+# mean(wrkdat$fakey1) -mean(wrkdat$fakey0)
 wrkdat$fakey1<-wrkdat$fakey0+trueATE
 
 wrkdat$obsy<-with(wrkdat, postbomb*fakey1+(1-postbomb)*fakey0 ) ## what we observe
+# mean(wrkdat$obsy)
 
 ## calculate the true ATE and the $\hat{\bar{\tau}}$
 trueATEfake<-with(wrkdat,mean(fakey1)-mean(fakey0))
 trueTotal<-with(wrkdat,sum(fakey1))
-trueDiffLogOdds<-
+trueDiffLogOdds<- ## 
 ## estimate the true ATE using the data that we would observe in this fake experiment
 estATEfake<-coef(lm(obsy~postbomb,wrkdat))["postbomb"]
 estTotal<-with(wrkdat,mean(obsy[postbomb==1])*length(obsy))
@@ -173,8 +274,31 @@ apply(dist.sample.est,1,summary)
 ## And recall that we have simulation error on the order of 1/sqrt(nsims)
 SEsims<-apply(dist.sample.est,1,function(x){ sqrt(var(x)/nsims) })
 
+```
 
-## ----interplogit, results='hide', echo=FALSE-----------------------------
+Interpreting a logit coefficient, in general, depends on the values of the explanatory variables. Here, we have only one explanatory variable, and it has only two values. In this case, we can interpret $\exp(\hat{\beta})$ as the odds ratio: the bombing made helping  `r exp(coef(logitmod))[['postbomb']]` times more likely, those interviewed after the bombing were  `r exp(coef(logitmod))[['postbomb']]` times more likely to report some helping behavior than those interviewed before the bombing. We tend to write something like:
+
+$$ logit(y=1) = logit(p) = \log(p/(1-p))= \beta_0 + \beta_1*x_1 + ... + \beta_k*x_k $$
+
+$$ p= exp(\beta_0 + \beta_1*x_1 + ... + \beta_k*x_k)/(1+exp(\beta_0 + \beta_1*x_1 + ... + \beta_k*x_k))$$
+
+
+Freedman notes that some researches want to know the average response to
+treatment (using his potential outcomes notation): $\alpha^T = (1/n)
+\sum_{i=1}^n Y_i^T$ or the average response to control $\alpha^C = (1/n)
+\sum_{i=1}^n Y_i^C$, neither of which is full observed. We show below that one
+can also define and estimate an average treatment effect: $\alpha^T -
+\alpha^C$.
+
+Others are interested in the difference in the loggs odd of success:
+
+$$ \Delta=\log \frac{\alpha^T}{1-\alpha^T} - \log \frac{\alpha^C}{1-\alpha^C} $$
+
+Some people seem to think that the coefficient from a logit model estimates $\Delta$, when, it turns out, it does not do so in an unbiased manner.
+
+
+
+```{r interplogit, results='hide', echo=FALSE}
 
 with(wrkdat,table(hlp01,postbomb))
 
@@ -194,8 +318,9 @@ coef(logitmod)[['postbomb']]
 exp(preddat$xbhat[preddat$postbomb==1]-preddat$xbhat[preddat$postbomb==0])
 ## odds(x)=prob(x)/(1-prob(x)) and
 
+```
 
-## ----biaswithlogit, echo=TRUE, cache=TRUE--------------------------------
+```{r biaswithlogit, echo=TRUE, cache=TRUE}
 set.seed(20150313)
 ## Bias refers to a relationship between the repeated operation of a procedure and a truth. So we have to invent a truth.
 ## numhlpers<-round(nrow(wrkdat)*.55) ## table(wrkdat$hlp01[wrkdat$postbomb==0])
@@ -269,5 +394,17 @@ trueDelta
 
 ## And recall that we have simulation error on the order of 1/sqrt(nsims)
 SEsims<-apply(dist.sample.est,1,function(x){ sqrt(var(x)/nsims) })
+
+```
+
+Recall that Freedman says that the $\Delta$ estimator is *consistent* but not unbiased. What would we need to do to show that it is consistent but that the logit coefficient is not consistent? Also, recall that Freedman's version included a covariate. Would this matter here?
+
+
+
+
+
+# References
+
+
 
 
